 = Fixed bug where player tags where reset to the displayname instead of back to the previous tag
 = Fixed bug with the Update Checker
 = Fixed bug where the respawn location when deactivating assassin mode was wrong
 ! Updated for TagAPI v3.0
 ! Changed API to use static methods
 ! Changed Updater, now uses Gravity's updater v2.0
 ! Huge code cleanup and refactoring

Version 1.1.1 | Tested on CB 1.4.7-R1.0
 ! Refactoring package naming so its my email address
 ! Cleanup loads of code
 + Added version checker
 + Added config option to allow PvP in no-PvP zones set by other plugins (WorldGuard, Towny)
 + Added kill count and bounties
 - Automatically downloading of TagAPI has been removed.
 
Version 1.1 | Tested on CB 1.4.5-R1.0
 ! Compatible with 1.4.5-R1.0 & 1.4.6-R0.1
 ! Now uses TapAPI v1.9.1
 = Fix with EntityDeathEvents
 = Fixed rare bug which could occur when Location data was lost
 + Added custom recipe for crafting masks
 + Added Hides player names from Tab list
 + Added time formatting. Time left is now displayed in hours/mins/secs
 + Added Assassin chat channel, Assassins can talk with each other. Neutral players will see messages scrambled.
 + Added prevent players from dropping Masks on the ground
 + Added some particle effects & config option to disable these
 + Added sound effect when Assassin mode activates / deactivates
 + Added a warning message when Assassin mode nearly runs out
 + Added potion effects when a Assassin respawns (& config option to disable this)
 + Added Vault support for charging money
 + Added config option to allow neutral pvp (pvp between non assassins)
 + Added config option to disable teleportation when Assassin Mode deactivates
 + Added config option to disable (teleport) commands when an Assassin
 - Removed status message when joining the game as a Neutral player


Version 1.0 | Tested on CB 1.4.5-R0.2
 + Added masks. Assassins get a mask which they can't take off